--- a/SIENI/SIENI-web/src/main/webapp/resources/css/style.css
+++ b/SIENI/SIENI-web/src/main/webapp/resources/css/style.css
@@ -99,17 +99,17 @@
 .burbuja {
     float: left;
     position: relative;
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
     background: none repeat scroll 0 0 red;
-    text-align: center;
+    text-align: left;
     color: #ffffff;
-    font: bold 0.5em Tahoma,Arial,Helvetica;
+    font: bold 0.3em Tahoma,Arial,Helvetica;
     padding: 5px 5px;
     position: absolute;
-    right: -1px;
-    top: 1px;
+    right: 5px;
+    top: 5px;
     -webkit-transition: all 0.5s ease-out;
        -moz-transition: all 0.5s ease-out;
         -ms-transition: all 0.5s ease-out;
@@ -118,7 +118,7 @@
 }
 
 .burbuja.agrandar {
-        width: 25px;
-        height: 40px;
+        width: 10px;
+        height: 10px;
         padding-top: -5px;
 }
