--- a/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
@@ -15,103 +15,15 @@
         <p:tabView>
             <p:tab title="Consultar Notificaciones">
                 <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <p:commandButton value="Noti" actionListener="#{notificacionesController.notificarPUSH()}" />
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
-                                 paginator="true"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-                        <p:column headerText="Usuario" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo30}
-                        </p:column>
-                        <p:column headerText="Título" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
-                        </p:column>
-                        <p:column headerText="Estado" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo15}
-                        </p:column>
-                        <p:column headerText="Curso" filterBy="#{car.description}" filterable="true" filterMatchMode="contains">
-                            #{formatoPantallas.campo100}
-                        </p:column>
-                        <p:column headerText="Acciones">
-                            <i class="icon-chat75 Fs25 Red MarRight10" style="cursor: pointer" title="Ver Notificación"></i>
-                            <i class="icon-close Fs25 Red MarRight10" style="cursor: pointer" title="Eliminar Notificación"></i>
-                        </p:column>
-                    </p:dataTable>
-                    <div class="EmptyBox20"></div>
-                    <p:commandButton value="Crear Nueva Notificación"></p:commandButton>
-                    <p:commandButton value="Refrescar"></p:commandButton>
-                </h:form>
-            </p:tab>
-            <p:tab title="Registrar Notificación">
-                <h:form>
+                    
                     <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                         <p:outputLabel value="Esta ayuda sirve un monton"/>
                     </p:dialog>
                     <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                     <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="2" class="Container50 Responsive">
-                        <p:outputLabel  value="Título: " class=" Responsive"></p:outputLabel>
-                        <p:inputText class=" Responsive" value="#{formatoPantallas.campo100}"></p:inputText>
-                        <p:outputLabel value="Estado: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu  class=" Responsive" value="#{archivosMultimediaForm.estado}">
-                            <f:selectItem itemValue ="1" itemLabel="#{formatoPantallas.campo15}"/>
-                            <f:selectItem itemValue="0" itemLabel="No Disponible"/>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="Curso: " class=" Responsive"></p:outputLabel>
-                        <p:selectOneMenu class=" Responsive" value="#{archivosMultimediaForm.tipo}">
-                            <f:selectItem itemValue ="0" itemLabel="#{formatoPantallas.campo100}"/>
-                            <f:selectItem itemValue ="1" itemLabel="Video"/>
-                            <f:selectItem itemValue ="2" itemLabel="Imagen"/>
-                        </p:selectOneMenu>
-                    </p:panelGrid>
-                    <p:panelGrid columns="2" class="Container50 Responsive">                    
-                        <p:outputLabel value="Notificación: " class=" Responsive"></p:outputLabel>
-                        <p:editor value="#{formatoPantallas.campo4000}" ></p:editor>
-                        <p:outputLabel for="mod_archivo" value="Archivo: " class=" Responsive"></p:outputLabel>
-                        <p:outputLabel value="Tipo de Archivo:"></p:outputLabel>
-                        <p:selectOneMenu>
-                            <f:selectItem itemValue="-1" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
-                            <f:selectItem itemValue="0" itemLabel="Audio"></f:selectItem>
-                            <f:selectItem itemValue="1" itemLabel="Video"></f:selectItem>
-                            <f:selectItem itemValue="2" itemLabel="Imagen"></f:selectItem>
-                        </p:selectOneMenu>
-                        <p:outputLabel value="Archivo"></p:outputLabel>
-                        <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
-                        </p:fileUpload>
-                    </p:panelGrid>
-                    <div class="EmptyBox20"></div>
-                    <div class="Container100 Responsive">
-                        <p:commandButton value="Guardar"/>
-                        <p:commandButton value="Limpiar"/>
-                        <p:commandButton value="Cancelar"/>
-                        <div class="EmptyBox20"></div>
-                        <p:splitButton value="Otras Opciones" action="#">
-                            <p:menuitem value="Gestionar Secciones">    
-                            </p:menuitem>
-                            <p:menuitem value="Programación de clases">    
-                            </p:menuitem>
-                            <p:menuitem value="Gestionar Clases">
-                            </p:menuitem>
-                        </p:splitButton>
-                    </div>
-                </h:form>
-            </p:tab>
-            <p:tab title="Ver Notificaciones">
-                <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:dataScroller value="#{clasesForm.plantillas}" var="noticia" >
-                        <p:panel  header="#{formatoPantallas.campo100}" closable="true">
-                            <p:outputLabel value="#{formatoPantallas.campo4000}"></p:outputLabel>
+                    <p:dataScroller value="#{notificacionesController.listNotificaciones}" var="notify" >
+                        <p:panel  header="#{notify.fechaInicioFormat}" closable="true">
+                            <p:outputLabel value="#{notify.nfMensaje}"></p:outputLabel>
                             <div class="EmptyBox20"></div>
                             <div class="Container73" style="cursor: pointer" >
                                 <i class="fa fa-file-movie-o Fs25"></i>
