correccion de errores de ejecucion y optimizacion de pantallas, falta corregir docente y alumnos (problema blob foto)

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -59,7 +59,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Crear Usuario" action="#{mntoUsuariosController.crear()}"></p:commandButton>
+                <p:commandButton value="Adicionar Usuario" action="#{mntoUsuariosController.crear()}"></p:commandButton>
                 <p:commandButton value="Refrescar"></p:commandButton>
             </h:form>
         </p:panel>
