--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseOnline/ver.xhtml
@@ -5,6 +5,9 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/template.xhtml"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+    <ui:define name="head">
+        <h:outputScript name="RTCMultiConnection.js" library="js" />
+    </ui:define>
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
